--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"node backend/server.js\"",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
